[package]
name        = "lib_port_llm_chat_call_tool"
version     = "1.0.0"
edition     = "2021"
authors     = ["Douglas Xavier"]
description = "Definição do contrato para chamada de ferramenta em um chat com llm."
license     = "proprietary"

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.89"
serde      = { version = "1", features = ["derive"] }
serde_json = "1.0.149"